# resolve-ytdlp

./: .gitignore  LICENSE  README.md  install.py  pyproject.toml
resolve_ytdlp/: __init__.py  app.py  config.py  deps.py  downloader.py  formats.py  gui.py  resolve_bridge.py
scripts/: Download from URL (yt-dlp).py  download_from_url.py
tests/: conftest.py  test_app.py  test_config.py  test_deps.py  test_downloader.py  test_formats.py  test_gui.py  test_install.py  test_resolve_bridge.py
